<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="70dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menu_editProfileBtn"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onEditProfileClick"
            android:text="@string/edit_profile_btn" />

        <Button
            android:id="@+id/menu_addQuestionBtn"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddQuestionClick"
            android:text="@string/add_question_btn" />

        <Button
            android:id="@+id/menu_listQuestionsBtn"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onListQuestionsClick"
            android:text="@string/list_questions_btn" />

        <Button
            android:id="@+id/menu_createExamBtn"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCreateExamClick"
            android:text="@string/create_exam_btn" />

        <Button
            android:id="@+id/menu_examSettingsBtn"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onExamSettingsClick"
            android:text="@string/exam_settings_btn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>