<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup_avatar"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:scaleType="fitCenter"
                android:clickable="true"
                android:onClick="onAvatarClick"
                android:src="@drawable/sample_avatar"/>

            <TextView
                android:id="@+id/signup_unameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/uname_txt_view" />

            <EditText
                android:id="@+id/signup_unameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/signup_fnameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/fname_view" />

            <EditText
                android:id="@+id/signup_fnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="" />

            <TextView
                android:id="@+id/signup_lnameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/lname_view" />

            <EditText
                android:id="@+id/signup_lnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/signup_emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/email_txt_view" />

            <EditText
                android:id="@+id/signup_emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/signup_phoneView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/phone_num_view" />

            <EditText
                android:id="@+id/signup_phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/signup_pwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/pword_txt_view" />

            <EditText
                android:id="@+id/signup_pwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pword_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/signup_pwordConfirmView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/pword_confirm" />

            <EditText
                android:id="@+id/signup_pwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pword_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signup_signupBtn"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onSignUpClick"
                android:text="@string/signup_btn" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>